apps/frontend/assets/css/phoenix.css
html {
  -webkit-text-size-adjust: 100%;
  line-height: 1.15;
}

body {
  margin: 0;
}

button,
input,
optgroup,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

details {
  display: block;
}

summary {
  display: list-item;
}

[hidden],
template {
  display: none;
}

:root {
  --max-size: 720px;
  --kbd-height: min(100em/2.15, 25vh);
  --board-width: min(80em, (100vh - var(--kbd-height) - 12vh - 10vh) * 5/6);
  --letter-size: calc(var(--board-width) / 5.5);
  --letter-font: calc(var(--letter-size) / 1.75);
  --letter-gap: calc(var(--letter-size) / 8);
}

body {
  --colorRight: #3aa394;
  --colorPlace: #d3ad69;
  --colorWrong: #312a2c;
  --colorWrongFG: #504a4b;
}

body.high {
  --colorRight: #e36322;
  --colorPlace: #0197f6;
}

html {
  background-color: #6e5c62;
  font-size: min(var(--max-size) / 100, 100vw/100);
  height: 100%;
  margin: 0 auto;
  max-width: var(--max-size);
  width: 100%;
}

* {
  outline: none;
  touch-action: manipulation;
}

body {
  color: #fafaff;
  font-family: Mitr, sans-serif;
  height: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  width: 100%;
}

body,
h1 {
  font-weight: 600;
}

h1 {
  font-size: 4vh;
  line-height: 3vh;
  margin: 0;
  text-align: center;
  text-transform: uppercase;
}

header {
  align-items: center;
  justify-content: center;
  padding: 1.5vh 0vh;
}

#notify {
  flex-shrink: 0;
  height: 6vh;
}

#msg,
#notify {
  align-items: center;
  display: flex;
  gap: var(--letter-gap) 0;
  flex-direction: column;
  justify-content: center;
  padding: 1.5vh 0vh;
}

.msg {
  background-color: #009afe;
  border-radius: 1vh;
  box-sizing: border-box;
  font-size: 2.5vh;
  font-weight: 400;
  height: 5vh;
  margin: 0 auto;
  opacity: 0;
  padding: 0 1.5em;
  z-index: 2000;
}

@-webkit-keyframes popup {
  0% {
    opacity: 0;
    transform: scale(0);
  }

  25% {
    opacity: 1;
  }

  75% {
    transform: scale(1.15);
  }

  to {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes popup {
  0% {
    opacity: 0;
    transform: scale(0);
  }

  25% {
    opacity: 1;
  }

  75% {
    transform: scale(1.15);
  }

  to {
    opacity: 1;
    transform: scale(1);
  }
}

main {
  align-items: flex-end;
  display: flex;
  flex-grow: 1;
  justify-content: center;
  margin: 1vh 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  width: 100%;
  padding: 1.5vh 0vh;
  overflow: auto;
  max-height: 40vh;
}

main::-webkit-scrollbar {
  background-color: transparent;
  width: 12px;
}

main::-webkit-scrollbar-thumb {
  background: #625256;
  border-radius: 6px;
}

main #board {
  display: grid;
  flex-grow: 0;
  gap: var(--letter-gap) 0;
  max-height: 100%;
  width: var(--board-width);
}

main .row {
  display: grid;
  gap: 0 var(--letter-gap);
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: auto;
}

@-webkit-keyframes rownope {
  10% {
    transform: translateX(-14px);
  }

  20% {
    transform: translateX(14px);
  }

  30% {
    transform: translateX(-8px);
  }

  40% {
    transform: translateX(8px);
  }

  50% {
    transform: translateX(-4px);
  }

  60% {
    transform: translateX(4px);
  }

  70% {
    transform: translateX(-2px);
  }

  80% {
    transform: translateX(2px);
  }

  90% {
    transform: translateX(-1px);
  }

  to {
    transform: translateX(1px);
  }
}

@keyframes rownope {
  10% {
    transform: translateX(-14px);
  }

  20% {
    transform: translateX(14px);
  }

  30% {
    transform: translateX(-8px);
  }

  40% {
    transform: translateX(8px);
  }

  50% {
    transform: translateX(-4px);
  }

  60% {
    transform: translateX(4px);
  }

  70% {
    transform: translateX(-2px);
  }

  80% {
    transform: translateX(2px);
  }

  90% {
    transform: translateX(-1px);
  }

  to {
    transform: translateX(1px);
  }
}

main .letter {
  --happy-jump: 55%;
  align-items: center;
  aspect-ratio: 1;
  background-color: #615458;
  border-radius: 10%;
  box-sizing: border-box;
  cursor: pointer;
  display: flex;
  font-size: var(--letter-font);
  justify-content: center;
  text-transform: uppercase;
}

@-webkit-keyframes happy {
  10% {
    transform: translateY(calc(var(--happy-jump) * -0.3));
  }

  20% {
    transform: translateY(calc(var(--happy-jump) * -0.58));
  }

  30% {
    transform: translateY(calc(var(--happy-jump) * -0.8));
  }

  40% {
    transform: translateY(calc(var(--happy-jump) * -0.95));
  }

  50% {
    transform: translateY(calc(var(--happy-jump) * -1));
  }

  60% {
    transform: translateY(calc(var(--happy-jump) * -0.95));
  }

  70% {
    transform: translateY(calc(var(--happy-jump) * -0.8));
  }

  80% {
    transform: translateY(calc(var(--happy-jump) * -0.58));
  }

  90% {
    transform: translateY(calc(var(--happy-jump) * -0.3));
  }

  to {
    transform: translateY(0);
  }
}

@keyframes happy {
  10% {
    transform: translateY(calc(var(--happy-jump) * -0.3));
  }

  20% {
    transform: translateY(calc(var(--happy-jump) * -0.58));
  }

  30% {
    transform: translateY(calc(var(--happy-jump) * -0.8));
  }

  40% {
    transform: translateY(calc(var(--happy-jump) * -0.95));
  }

  50% {
    transform: translateY(calc(var(--happy-jump) * -1));
  }

  60% {
    transform: translateY(calc(var(--happy-jump) * -0.95));
  }

  70% {
    transform: translateY(calc(var(--happy-jump) * -0.8));
  }

  80% {
    transform: translateY(calc(var(--happy-jump) * -0.58));
  }

  90% {
    transform: translateY(calc(var(--happy-jump) * -0.3));
  }

  to {
    transform: translateY(0);
  }
}

@-webkit-keyframes flip {
  0% {
    background-color: transparent;
    border: 4px solid #4c4347;
    transform: perspective(200px) rotateY(0deg);
  }

  49.99999% {
    background-color: transparent;
    border: 4px solid #4c4347;
    transform: perspective(200px) rotateY(90deg);
  }

  50% {
    background-color: var(--color);
    border: none;
    transform: perspective(200px) rotateY(-90deg);
  }

  50.00001% {
    background-color: var(--color);
    border: none;
  }

  to {
    background-color: var(--color);
    transform: perspective(200px) rotateY(0deg);
  }
}

@keyframes flip {
  0% {
    background-color: transparent;
    border: 4px solid #4c4347;
    transform: perspective(200px) rotateY(0deg);
  }

  49.99999% {
    background-color: transparent;
    border: 4px solid #4c4347;
    transform: perspective(200px) rotateY(90deg);
  }

  50% {
    background-color: var(--color);
    border: none;
    transform: perspective(200px) rotateY(-90deg);
  }

  50.00001% {
    background-color: var(--color);
    border: none;
  }

  to {
    background-color: var(--color);
    transform: perspective(200px) rotateY(0deg);
  }
}

@-webkit-keyframes type {
  0% {
    color: transparent;
    transform: perspective(200px) translateZ(0);
  }

  24.99999% {
    color: transparent;
  }

  25% {
    color: #fafaff;
    transform: perspective(200px) translateZ(30px);
  }

  to {
    color: #fafaff;
    transform: perspective(200px) translateZ(0);
  }
}

@keyframes type {
  0% {
    color: transparent;
    transform: perspective(200px) translateZ(0);
  }

  24.99999% {
    color: transparent;
  }

  25% {
    color: #fafaff;
    transform: perspective(200px) translateZ(30px);
  }

  to {
    color: #fafaff;
    transform: perspective(200px) translateZ(0);
  }
}

main .letter.edit {
  border-bottom: 0.3em solid #4c4347 !important;
}

main .letter.ontype {
  -webkit-animation: type 0.15s ease-out 0s none;
  animation: type 0.15s ease-out 0s none;
}

main .letter.empty {
  background-color: transparent;
  border: 0.125em solid #4c4347;
}

main .letter.correct {
  --color: var(--colorRight);
}

main .letter.present,
main .letter.correct {
  -webkit-animation: flip 0.5s linear 0s forwards;
  animation: flip 0.5s linear 0s forwards;
}

main .letter.present {
  --color: var(--colorPlace);
}

main .letter.absent {
  --color: var(--colorWrong);
  -webkit-animation: flip 0.5s linear 0s forwards;
  animation: flip 0.5s linear 0s forwards;
}

main .letter.done {
  background-color: var(--colorRight);
}

#kbd .correct {
  background-color: var(--colorRight) !important;
}

#kbd .present {
  background-color: var(--colorPlace);
}

#kbd .absent {
  background-color: var(--colorWrong);
  color: var(--colorWrongFG);
}

#kbd .present,
#kbd .correct,
#kbd .absent {
  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
}

#kbd {
  grid-gap: 1em 1em;
  box-sizing: border-box;
  display: grid;
  flex-shrink: 0;
  grid-template-columns: repeat(32, 1fr);
  grid-template-rows: repeat(3, 33%);
  height: var(--kbd-height);
  padding: 0 3em 3em;
  width: 100%;
}

#kbd button {
  align-items: center;
  background-color: #4c4347;
  border: none;
  border-radius: 8%;
  color: #fafaff;
  cursor: pointer;
  display: flex;
  font-size: min(4em, calc(var(--kbd-height) / 6));
  font-weight: 500;
  grid-column: span 3;
  justify-content: center;
}

#kbd #kbd_a {
  grid-column: 2 / span 3;
}

#kbd #kbd_z {
  grid-column: 3 / span 3;
}

#kbd #kbd_backspace {
  grid-column: 30 / span 3;
}

#kbd #kbd_enter {
  font-size: min(3.6em, calc(var(--kbd-height) / 7));
  grid-column: 25 / span 8;
  grid-row: span 3 1;
}

footer {
  position: fixed;
  bottom: 0;
}

.phx-connected {
  height: 100%;
  overflow: hidden;
}

